third_party/move/move-compiler-v2/tests/more-v1/parser/address_misspelled.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/address_misspelled.move:1:1
  │
1 │ addrexx 0x1:
  │ ^^^^^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'addrexx'
